# supabase-py-expt

./: README.md  config.py  pyproject.toml
app/: fetch.py  stor.py  try_supa3.py  vendorNproduct.py
